reports/waveA/test-verbose.log

[1m[7m[36m RUN [39m[27m[22m [36mv2.1.9 [39m[90mC:/Users/sabou/dev/odavl[39m
      [2mCoverage enabled with [22m[33mv8[39m

 [32mÔ£ô[39m apps/vscode-ext/src/extension.test.ts[2m > [22mVS Code Extension Smoke Tests[2m > [22mshould have valid extension manifest
 [32mÔ£ô[39m apps/vscode-ext/src/extension.test.ts[2m > [22mVS Code Extension Smoke Tests[2m > [22mshould have ODAVL doctor command configured
 [32mÔ£ô[39m apps/cli/src/index.test.ts[2m > [22mODAVL CLI Smoke Tests[2m > [22mshould have valid CLI entry point
 [32mÔ£ô[39m apps/cli/src/index.test.ts[2m > [22mODAVL CLI Smoke Tests[2m > [22mshould have valid package.json configuration
 [32mÔ£ô[39m apps/cli/tests/core.test.ts[2m > [22mODAVL Core Functions[2m > [22mobserve()[2m > [22mshould collect ESLint warnings and TypeScript errors
 [32mÔ£ô[39m apps/cli/tests/core.test.ts[2m > [22mODAVL Core Functions[2m > [22mdecide()[2m > [22mshould select recipe based on trust scores
 [32mÔ£ô[39m apps/cli/tests/core.test.ts[2m > [22mODAVL Core Functions[2m > [22mact()[2m > [22mshould execute fixes and create undo snapshots
 [31m├ù[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould execute observe command and return metrics[33m 11687[2mms[22m[39m
[31m   ÔåÆ Expected property name or '}' in JSON at position 4 (line 2 column 3)[39m
 [31m├ù[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould execute decide command and return recipe[33m 11558[2mms[22m[39m
[31m   ÔåÆ expected [ Array(4) ] to include '[DECIDE] Selected recipe: esm-hygieneÔÇª'[39m
 [32mÔ£ô[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould validate ODAVL history exists after runs
 [32mÔ£ô[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould validate recipe trust system
 [32mÔ£ô[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould validate quality gates configuration
 [32mÔ£ô[39m apps/cli/tests/integration.test.ts[2m > [22mODAVL CLI Integration Tests[2m > [22mshould validate policy configuration

ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ» Failed Tests 2 ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»

 FAIL  apps/cli/tests/integration.test.ts > ODAVL CLI Integration Tests > should execute observe command and return metrics
SyntaxError: Expected property name or '}' in JSON at position 4 (line 2 column 3)
 ÔØ» apps/cli/tests/integration.test.ts:15:26
     13|     })
     14|     
     15|     const metrics = JSON.parse(result.trim())
       |                          ^
     16|     expect(metrics).toHaveProperty('eslintWarnings')
     17|     expect(metrics).toHaveProperty('typeErrors')

ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»[1/2]ÔÄ»

 FAIL  apps/cli/tests/integration.test.ts > ODAVL CLI Integration Tests > should execute decide command and return recipe
AssertionError: expected [ Array(4) ] to include '[DECIDE] Selected recipe: esm-hygieneÔÇª'
 ÔØ» apps/cli/tests/integration.test.ts:31:8
     29|     const decision = result.trim()
     30|     expect(['esm-hygiene', 'remove-unused', 'format-consistency', 'nooÔÇª
     31|       .toContain(decision)
       |        ^
     32|   })
     33| 

ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»ÔÄ»[2/2]ÔÄ»

[2m Test Files [22m [1m[31m1 failed[39m[22m[2m | [22m[1m[32m3 passed[39m[22m[90m (4)[39m
[2m      Tests [22m [1m[31m2 failed[39m[22m[2m | [22m[1m[32m11 passed[39m[22m[90m (13)[39m
[2m   Start at [22m 23:35:35
[2m   Duration [22m 24.37s[2m (transform 192ms, setup 0ms, collect 306ms, tests 23.28s, environment 2ms, prepare 997ms)[22m

